@@ -1,35 +1,58 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-
-buildscript {
-    repositories {
-        google()
-        mavenCentral()
-    }
-    dependencies {
-        classpath("com.android.tools.build:gradle:8.8.0")
-        classpath("com.google.gms:google-services:4.4.2")
-        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:1.8.20")
-        classpath("com.google.ar.sceneform:plugin:1.17.1")
-        classpath("org.jetbrains.kotlin:kotlin-serialization:1.9.24")
-        //classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0"
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
-    }
-
-//    configurations.all {
-//        resolutionStrategy {
-//            force("net.sf.proguard:proguard-base:6.2.1")
-//        }
-//    }
-    
+plugins {
+    alias(libs.plugins.androidApplication) apply false
+    alias(libs.plugins.androidLibrary) apply false
+    alias(libs.plugins.kotlinAndroid) apply false
+    alias(libs.plugins.kapt) apply false
+    alias(libs.plugins.serialization) apply false
+    alias(libs.plugins.kover) apply false
+    id("org.jetbrains.dokka") version "1.9.20" apply false
+    alias(libs.plugins.jetbrainsKotlinJvm) apply false
 }
 
 tasks.register("clean", Delete::class) {
-    delete(rootProject.buildDir)
+    delete(rootProject.layout.buildDirectory.get().asFile.path)
 }
 
-//tasks.processResources.configure {
-//    duplicatesStrategy = DuplicatesStrategy.INCLUDE
-//    from("gradle/libs.versions.toml")
-//}
+val ktlint by configurations.creating
+
+dependencies {
+    ktlint("com.pinterest.ktlint:ktlint-cli:1.0.1") {
+        attributes {
+            attribute(Bundling.BUNDLING_ATTRIBUTE, objects.named(Bundling.EXTERNAL))
+        }
+    }
+    // ktlint(project(":custom-ktlint-ruleset")) // in case of custom ruleset
+}
+
+tasks.register<JavaExec>("ktlint") {
+    group = LifecycleBasePlugin.VERIFICATION_GROUP
+    description = "Check Kotlin code style"
+    classpath = ktlint
+    mainClass.set("com.pinterest.ktlint.Main")
+    // see https://pinterest.github.io/ktlint/install/cli/#command-line-usage for more information
+
+    args(
+        "**/src/**/*.kt",
+        "**.kts",
+        "!**/build/**",
+        "--reporter=checkstyle,output=${project.layout.buildDirectory.file(
+            "ktlintreport/ktlint.xml",
+        ).get().asFile.path}",
+    )
+}
+
+tasks.register<JavaExec>("ktlintFormat") {
+    group = LifecycleBasePlugin.VERIFICATION_GROUP
+    description = "Check Kotlin code style and format"
+    classpath = ktlint
+    mainClass.set("com.pinterest.ktlint.Main")
+    jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED")
+    // see https://pinterest.github.io/ktlint/install/cli/#command-line-usage for more information
+    args(
+        "-F",
+        "**/src/**/*.kt",
+        "**.kts",
+        "!**/build/**",
+    )
+}
